scrollbar fixed

--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,5 @@
   height: 100vh;
   display: flex;
   align-items: center;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
